some jaotc failures of fastdebug build with specific flags

XMLWordPrintable

    • b14
    • x86
    • generic
    • Fix failed

      Running tests using JTREG control variable 'VERBOSE=nopass;VM_OPTIONS=-Xcomp -ea -esa -XX:CompileThreshold=100 -XX:-TieredCompilation'
      Test selection 'jtreg:test/hotspot/jtreg/compiler', will run:
      * jtreg:test/hotspot/jtreg/compiler

      Running test 'jtreg:test/hotspot/jtreg/compiler'
      --------------------------------------------------
      TEST: compiler/aot/cli/jaotc/AtFileTest.java
      TEST RESULT: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Expected to get exit value of [0]
      --------------------------------------------------
      TEST: compiler/aot/cli/jaotc/CompileAbsoluteDirectoryTest.java
      TEST RESULT: Failed. Execution failed: `main' threw exception: java.lang.Error: Can't get full path name for '.', got exception java.lang.RuntimeException: Expected to get exit value of [0]
      --------------------------------------------------
      TEST: compiler/aot/cli/jaotc/CompileClassTest.java
      TEST RESULT: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Expected to get exit value of [0]
      --------------------------------------------------
      TEST: compiler/aot/cli/jaotc/CompileClassWithDebugTest.java
      TEST RESULT: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Expected to get exit value of [0]
      --------------------------------------------------
      TEST: compiler/aot/cli/jaotc/CompileDirectoryTest.java
      TEST RESULT: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Expected to get exit value of [0]
      --------------------------------------------------
      TEST: compiler/aot/cli/jaotc/CompileJarTest.java
      TEST RESULT: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Expected to get exit value of [0]
      --------------------------------------------------
      TEST: compiler/aot/cli/jaotc/CompileModuleTest.java
      TEST RESULT: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Expected to get exit value of [0]
      --------------------------------------------------
      TEST: compiler/aot/cli/jaotc/IgnoreErrorsTest.java
      TEST RESULT: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Expected to get exit value of [0]
      --------------------------------------------------
      TEST: compiler/aot/cli/jaotc/ListOptionTest.java
      TEST RESULT: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Expected to get exit value of [0]
      --------------------------------------------------
      TEST: compiler/aot/cli/jaotc/ListOptionWrongFileTest.java
      TEST RESULT: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: Expected to get exit value of [0]
      --------------------------------------------------
      Test results: passed: 967; failed: 10
      Report written to /build/test-results/jtreg_test_hotspot_jtreg_compiler/html/report.html
      Results written to /build/test-support/jtreg_test_hotspot_jtreg_compiler
      Error: Some tests failed or other problems occurred.
      Finished running test 'jtreg:test/hotspot/jtreg/compiler'
      Test report is stored in /build/test-results/jtreg_test_hotspot_jtreg_compiler

      ==============================
      Test summary
      ==============================
         TEST TOTAL PASS FAIL ERROR
      >> jtreg:test/hotspot/jtreg/compiler 977 967 10 0 <<

            Assignee:
            Roland Westrelin
            Reporter:
            Xin Liu
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: