8240195: some jaotc failures of fastdebug build with specific flags

Reviewed-by: kvn, thartmann